Changes from 0.13.0

   [ Language Changes ]
   * The unquote-splice or ~@ form now accepts any false value as empty.
   * `yield-from` is no longer supported under Python 2
   * `apply` has been replaced with Python-style unpacking operators `#*` and
     `#**` (e.g., `(f #* args #** kwargs)`)
   * Single-character "sharp macros" changed to "tag macros", which can have
     longer names
   * Periods are no longer allowed in keywords
   * `eval` is now a function instead of a special form
   * The compiler now automatically promotes values to Hy model objects
     as necessary, so you can write ``(eval `(+ 1 ~n))`` instead of
     ``(eval `(+ 1 ~(HyInteger n)))``
   * Literal `Inf`s and `NaN`s must now be capitalized like that
   * `get` is available as a function
   * new `comment` macro
   * support EDN `#_` syntax to discard the next term
   * `return` has been implemented as a special form

   [ Bug Fixes ]
   * Numeric literals are no longer parsed as symbols when followed by a dot
     and a symbol
   * Hy now respects the environment variable PYTHONDONTWRITEBYTECODE
   * String literals should no longer be interpreted as special forms or macros
   * Tag macros (née sharp macros) whose names begin with `!` are no longer
     mistaken for shebang lines
   * Fixed a bug where REPL history wasn't saved if you quit the REPL with
     `(quit)` or `(exit)`
   * `exec` now works under Python 2
   * No TypeError from multi-arity defn returning values evaluating to None
   * try form now possible in defmacro/deftag
   * Fixed a crash when `macroexpand`ing a macro with a named import
   * Fixed a crash when `with` suppresses an exception. `with` now returns
     `None` in this case.
   * `assoc` now evaluates its arguments only once each
   * `break` and `continue` now raise an error when given arguments
     instead of silently ignoring them

   [ Misc. Improvements ]
   * `read`, `read_str`, and `eval` are exposed and documented as top-level