@@ -21,7 +21,6 @@ except ImportError:
 import sys
 
 PY3 = sys.version_info[0] >= 3
-PY34 = sys.version_info >= (3, 4)
 PY35 = sys.version_info >= (3, 5)
 
 str_type     = str   if PY3 else unicode      # NOQA
