@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pypy,py33,py34,py35,py36,flake8
+envlist = py27,pypy,py34,py35,py36,flake8
 skipsdist = True
 
 [testenv]
